--- a/.github/workflows/validate_backend.yml
+++ b/.github/workflows/validate_backend.yml
@@ -12,6 +12,10 @@ on:
       - opened
       - reopened
       - synchronize
+    paths:
+      - 'backend/build.gradle'
+      - 'backend/settings.gradle'
+      - 'backend/src/**'
 
 jobs:
   validate:
