--- a/.github/workflows/validate_docker.yml
+++ b/.github/workflows/validate_docker.yml
@@ -1,4 +1,4 @@
-name: Docker build
+name: Docker
 
 on:
   workflow_dispatch:
@@ -35,7 +35,7 @@ jobs:
 
       # Build Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image (dev)
+      - name: Build Docker image
         id: build-and-push-dev
         uses: docker/build-push-action@v6.18.0
         with:
