--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,7 @@
         "vue-draggable-next": "^2.3.0",
         "vue-i18n": "^11.1.12",
         "vue-router": "^4.6.3",
-        "vuedraggable": "^4.1.0",
-        "vuejs3-datepicker": "^1.1.3"
+        "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.28.5",
