--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
         "markdown-it": "^14.1.0",
         "svg-country-flags": "^1.2.10",
         "uuid": "^13.0.0",
-        "vue": "^3.5.24",
         "vue-draggable-next": "^2.3.0",
         "vue-i18n": "^11.1.12",
         "vue-router": "^4.6.3",
@@ -40,10 +39,12 @@
         "@types/uuid": "^11.0.0",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vue/eslint-config-typescript": "^14.6.0",
+        "@vue/test-utils": "^2.4.6",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-vue": "^10.5.1",
+        "happy-dom": "^20.0.8",
         "postcss": "^8.5.6",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.7.1",
@@ -53,6 +54,8 @@
         "vite": "^7.2.2",
         "vite-plugin-pwa": "^1.1.0",
         "vite-svg-loader": "^5.1.0",
+        "vitest": "^3.2.4",
+        "vue": "^3.5.24",
         "vue-tsc": "^3.1.3"
     }
 }
