--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -23,8 +23,9 @@
         "noUncheckedSideEffectImports": true,
         "baseUrl": "./",
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": ["src/*"],
+            "~/*": ["test/*"]
         }
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "test/**/*.ts"]
 }
