--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -82,6 +82,7 @@ sonar {
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.plugins.downloadOnlyRequired", true
         property "sonar.coverage.jacoco.xmlReportPaths", "backend/build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.javascript.lcov.reportPaths", "../frontend/coverage/lcov.info"
         property "sonar.sources", "src/main/java, ../frontend/src"
         property "sonar.tests", "src/test/java, ../frontend/test"
     }
