--- a/.github/workflows/validate_code.yml
+++ b/.github/workflows/validate_code.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Run tests
         shell: bash
         working-directory: frontend
-        run: npm run test
+        run: npm run test:coverage
 
       - name: Upload test coverage artifact
         uses: actions/upload-artifact@v4
