--- a/.github/workflows/validate_code.yml
+++ b/.github/workflows/validate_code.yml
@@ -160,4 +160,4 @@ jobs:
         working-directory: backend
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar --info
+        run: ./gradlew sonar -x test
