--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -81,6 +81,7 @@ sonar {
         property "sonar.organization", "grossherzogin-elisabeth"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.plugins.downloadOnlyRequired", true
+        property "sonar.projectBaseDir", ".."
         property "sonar.coverage.jacoco.xmlReportPaths", "backend/build/reports/jacoco/test/jacocoTestReport.xml"
         property "sonar.javascript.lcov.reportPaths", "../frontend/coverage/lcov.info"
         property "sonar.sources", "src/main/java, ../frontend/src"
